#pragma once

struct Point
{
    int x, y;
};
